# shik

./: .gitignore  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  sample.shk
demo/: branching.shk  curring.shk  easy.shk  factorial.shk  line-count.shk  reverse-string.shk  sample.shk  sfile.fish  sfile.shk  shell-demo.shk
scripts/: build-release.sh  build-release.shk
src/: lang.rs  lib.rs  main.rs
src/eval/: error.rs  evaluator.rs  mod.rs  value.rs
src/eval/native_functions/: bool.rs  branching.rs  file.rs  keywords.rs  list.rs  macros.rs  math.rs  misc.rs  mod.rs  number.rs  polymorphic.rs  print.rs  shell.rs  string.rs  variables.rs
src/parser/: ast.rs  error.rs  lexer.rs  lexer_tests.rs  mod.rs  parser.rs  tests.rs  tokens.rs
tests/: test_detailed.rs  test_example.rs  test_lexer.rs  test_multiline.rs  test_newline_handling.rs  test_parser.rs  test_precedence.rs
